k8sNetPolicy/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    ingress.class: "haproxy"
spec:
  ingressClassName: haproxy
  rules:
    - host: webdemo.5el.com.ua
      http:
        paths:
          - backend:
              service:
                name: php-apache
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
